hphp/hack/test/typecheck/new_inference/eager_solve/function_apply_nothing.php.exp
File "function_apply_nothing.php", line 12, characters 39-40:
Was expecting an object but type is unknown (Typing[4297])
File "function_apply_nothing.php", line 12, characters 18-19:
It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "function_apply_nothing.php", line 12, characters 51-52:
Was expecting an array or collection but type is unknown (Typing[4297])
File "function_apply_nothing.php", line 12, characters 18-19:
It is unknown because a type could not be determined here
